# mipt-build-systems

./: .gitignore  CMakeLists.txt  README.md
a/: CMakeLists.txt  lib.cpp  lib.h
b/: main.cpp  main.h
c/: preparing.py
